--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="slider-container" onclick="moveSlider(event)">
+    <div id="slider-container" onclick="moveSlider(event)" ondragover="moveSlider(event)">
         <h1>Custom Slider</h1>
         <div id="slider-bar">
             <div id="slider"></div>
